Agregado acceso de icono de Login

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -86,6 +86,7 @@
                         </ul>
                     </li>-->
                     <li><a class="nav-link scrollto" href="#contact">Contactos</a></li>
+                    <li><a class="nav-link scrollto" href="#login"><i class="bx bx-lock bx-sm"></i></a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
